[project]
name = "cronjob-scheduler"
version = "2.0.0"
description = "A Docker-native cronjob scheduler using RRULE labels for flexible, event-driven task scheduling"
readme = "README.md"
authors = [
    { name = "Jan Scheffler", email = "jan.scheffler@qodev.ai" }
]
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["docker", "scheduler", "cronjob", "rrule", "task-scheduler", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Systems Administration",
    "Framework :: AsyncIO",
]
dependencies = [
    "aiodocker>=0.21.0",
    "python-dateutil>=2.8.2",
]

[project.urls]
Homepage = "https://github.com/qodevai/cronjobs"
Repository = "https://github.com/qodevai/cronjobs"
Issues = "https://github.com/qodevai/cronjobs/issues"
Documentation = "https://github.com/qodevai/cronjobs#readme"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.6.0",
    "pyright>=1.1.0",
]

[project.scripts]
cronjob-scheduler = "cronjob_scheduler:main"

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.format]
skip-magic-trailing-comma = false

[tool.ruff.lint]
select = [
    # Core quality (always enabled)
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "RUF",  # ruff-specific rules

    # Project-specific (high value for this codebase)
    "ASYNC", # async/await best practices (async-heavy project)
    "G",    # logging format rules (logging-heavy project)
    "PERF", # performance anti-patterns

    # Docstring formatting (minimal subset)
    "D213",  # Multi-line docstring summary should start at the second line (newline after opening quotes)

    # Optional (can enable later)
    # "ANN",  # flake8-annotations - strict typing
    # "D",    # pydocstyle - full docstring conventions
    # "PL",   # pylint - comprehensive checks
]
ignore = [
    # Docstring style conflicts
    "D212",  # Multi-line docstring summary should start at first line (conflicts with D213)

    # Performance rules that may conflict with readability
    "PERF203",  # try-except within a loop - sometimes necessary for error handling
]

# Never auto-fix these rules (require manual review)
unfixable = [
    "F401",  # Unused imports - may be used elsewhere
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "ASYNC",    # Async rules relaxed for test fixtures
    "RUF015",   # Prefer next(iter()) - list[0] is clearer in tests
]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false
reportUnusedImport = true
reportUnusedClass = true
reportUnusedFunction = true
reportUnusedVariable = true
reportDuplicateImport = true
reportAttributeAccessIssue = false  # aiodocker has incomplete type stubs
reportGeneralTypeIssues = false     # aiodocker has incomplete type stubs

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--strict-markers"

[tool.typos.default]
# Extend to ignore patterns that look like hashes or tokens
extend-ignore-re = ["[0-9a-zA-Z]{40,}"]

[tool.typos.default.extend-words]
# Add project-specific words that are correct but flagged by typos
# Example: cronjobs = "cronjobs"

[tool.typos.files]
extend-exclude = [
    "uv.lock",
    "*.log",
    ".coverage",
]
